test/scc_test/stmt/semantic-errors/049.t
struct A { int x; };

struct A test()
{
    return 1;
}